src/App.css
/* App */

body {
  background-color: #000;
  color: #FFF;
  font-family: 'Helvetica', sans-serif;
  font-weight: 100;
  letter-spacing: .3rem;
}

.App {
  background-color: #000;
  z-index: -2;
}

.background-image {
  animation: scroll 35s linear forwards;
  background-image: url(/images/background.gif);
  background-size: cover;
  height: 100vh;
  left: 0;
  mix-blend-mode: lighten;
  opacity: .5;
  overflow: hidden;
  position: fixed;
  top: 0;
  transform-origin: 50% 100%;
  transform: perspective(3000px) rotateX(32deg);
  width:100%;
  pointer-events:none;
}

.background-image:after {
  background-image: linear-gradient(top, rgba(0,0,0,1) 0%, transparent 100%);
  bottom: 80%;
  content: ' ';
  left: 0;
  pointer-events: none;
  position: absolute;
  right: 0;
  top: 0;
}


@keyframes scroll {
  100% {
    background-position:0px 3000px;
  }
}

.container {
  display: grid;
  grid-template-columns: 15% 70% 15%;
  grid-template-rows: 20vh 30vh 20vh 30vh;
  height: 93vh;
  text-align: center;
  width: 100vw;
}

.container p {
  grid-column: 2;
  grid-row: 3;
  text-align: center;
}

/* Buttons*/

.button {
  background-color: #FFF;
  border-radius: 20px;
  border: none;
  color: #000;
  font-size: 1.2rem;
  font-weight: 100;
  grid-column: 2;
  grid-row: 3;
  height: 40px;
  justify-self: center;
  letter-spacing: .3rem;
  min-width: 20rem;
  width: 70%;
  z-index: 5;
}

.magic-carpet-btn {
  grid-row: 3;
}

.cancel-btn {
  background-color: #ff5e57;
  border-radius: 50%;
  grid-row: 3;
  height: 200px;
  margin: 0 auto;
  min-width: auto;
  width: 200px;

}

.button:hover {
  cursor: pointer;
}

/* Settings Icon*/

.container .settings-button {
  grid-column: 3;
  grid-row: 1;
  height: 10vh;
  margin: 10px;
  z-index: 5;
}

.container .settings-button:hover {
  background-color: inherit !important;
}

.container .settings-icon {
  color: #FFF;
  height: 8vh;
  width: 8vw;
  transition: transform 0.5s ease;
}

.container .settings-icon:hover {
  transform:rotate(360deg);
}

/* Logo*/

.logo {
  font-size: 3rem;
  grid-column: 2;
  grid-row: 2;
  justify-self: center;
  max-height: 300px;
  max-width: 600px;
  min-width: 200px;
}

/* Settings */

.settings {
  grid-column: 2;
  grid-row: 2;
  text-align: left;
  z-index: 5;
}

.settings-header {
  font-weight: 100;
  letter-spacing: .3rem;
}

/* Cancellation Confirmation*/

.cancellation-confirmation {
  grid-row: 2;
  grid-column: 2;
  align-self: center;
  font-weight: 100;
}

/* loading */

.loading-icon {
  grid-column: 2;
  grid-row: 2;
  justify-self: center;
  max-height: 300px;
  max-width: 600px;
}

/* Sponsor Banner */

.sponsor-banner {
  grid-row: 5;
  grid-column: 1 / 4;
  width: 100%;
  text-align: center;
}

.sponsor-tagline {
  display: inline-block;
}

.sponsor-logo {
  height: 30px;
  vertical-align: middle;
  padding: 0 .5rem;
}

.yelp-logo {
  vertical-align: text-bottom;
}

/*  No Destiantion Page */

.optional-message-container {
  grid-column-start: 2;
  grid-row-start: 2;
  z-index: 9;
}

